--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -381,7 +381,7 @@ As computer hardware architecture moves from single- to multi-cores, parallel pr
 \label{ILPGA}
 %----------------------------------------------
 
-The ILP and GA were taken from our previous studies, from~\cite{Trindade2015} and~\cite{Trindade2016}. \textcolor{blue}{Both use slack variables in order to eliminate the modulus operator of Eq.~\eqref{hw-sw-partitioning} and to use commercial tools.} However, GA had improvements from the parameters of related studies in order to increase the solution accuracy without producing timeout. The tuning was performed by empirical tests and resulted in changing of three parameters, which are passed to the function \textit{ga} of MATLAB, as shown in~\cite{TheMathWorks2013}: the population size was set from $300$ to $500$, the Elite count changed from $2$ (default value) to $50$, and the number of generations changed from $100*NumberOfVariables$ (default) to $75$. \textcolor{blue}{All the parameters of ILP and GA algorithms were presented and discussed in~\cite{Trindade2015} and~\cite{Trindade2016}. Choosing ILP and GA, over other possible optimization techniques, it is due to the fact that these techniques were used in related work, as~\cite{Arato2003} and~\cite{Mann2007}, facilitating the comparison with the techniques that we propose in this paper.}
+The ILP and GA were taken from our previous studies, from~\cite{Trindade2015} and~\cite{Trindade2016}. \textcolor{blue}{Both use slack variables in order to eliminate the modulus operator of Eq.~\eqref{hw-sw-partitioning} and to use commercial tools.} However, GA had improvements from the parameters of related studies in order to increase the solution accuracy without producing timeout. The tuning was performed by empirical tests and resulted in changing of three parameters, which are passed to the function \textit{ga} of MATLAB, as shown in~\cite{TheMathWorks2013}: the population size was set from $300$ to $500$, the Elite count changed from $2$ (default value) to $50$, and the number of generations changed from $100*NumberOfVariables$ (default) to $75$. \textcolor{blue}{All ILP and GA parameters were presented and discussed in~\cite{Trindade2015} and~\cite{Trindade2016}. In particular, the ILP and GA algorithms were chosen since they were also used in other related work, as~\cite{Arato2003} and~\cite{Mann2007}, thus facilitating the comparison to the present techniques (that we propose in this paper).}
 
 %----------------------------------------------
 \subsection{Verification Algorithm using Sequential ESBMC}
