[B-2] In page 8, column 2: " Each time was measured 3 times (average taken). Based on standard deviation and tolerance interval to each set of time sample, it was obtained a statistical conﬁdence of 91.7% to ESBMC (sequential, SS, PB and νZ), 95.9% to ESBMC-PS, and 92.0% to ILP and GA. A timeout condition (TO) is reached when the veriﬁcation time is longer than 3600 seconds".  These results are o.k BUT, the problem is 3 times is very short number of times for making an experiment. Generally, people use more than 30 (and use Normal Gaussian on the analysis) or minor 30 (uses T-student). Why the number (3). It is no adequate. Repeat the experiments more times, or show a better justificative for it.

--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -570,11 +570,11 @@ This section is split into three parts. The setup is described in Section~\ref{E
 \label{Experimental-Setup}
 %----------------------------------------------
 
-ESBMC v$2$.$0$ running on a $64$-bit Ubuntu $14$.$04$.$1$ LTS operating system was used. A parallel approach of the ESBMC-SS, ESBMC-PS, ESBMC-PB were implemented in C$++$11. Version $2$.$0$.$1$ of Boolector SMT-solver, as shown in~\cite{Brummayer2009} (freely available) was used as the default solver for ESBMC. ESBMC-$\nu$Z as a built-in tool to Z3 was also used, as shown in~\cite{Bjorner2014}.  For ILP and GA formulations, MATLAB R$2013$a from MathWorks with Parallel Computing Toolbox was used, as shown in~\cite{TheMathWorks2013}. MATLAB is a dynamically typed high-level language, known as the state-of-the-art mathematical software, as shown in~\cite{Tranquillo2011} and is widely used by the engineering community, as shown in~\cite{Hong2010}.
+ESBMC v$2$.$0$ running on a $64$-bit Ubuntu $14$.$04$.$1$ LTS operating system was used. A parallel approach of the ESBMC-SS, ESBMC-PS, ESBMC-PB were implemented in C$++$11. Version $2$.$0$.$1$ of Boolector SMT-solver, as described in~\cite{Brummayer2009} (freely available) was used as the default solver for ESBMC. ESBMC-$\nu$Z as a built-in tool to Z3 was also used, as presented in~\cite{Bjorner2014}. For ILP and GA formulations, MATLAB R$2013$a from MathWorks with Parallel Computing Toolbox was used, as described in~\cite{TheMathWorks2013}. MATLAB is a dynamically typed high-level language, known as the state-of-the-art mathematical software, as described in~\cite{Tranquillo2011} and is widely used by the engineering community, as described in~\cite{Hong2010}.
 
 \textcolor{blue}{We have to point out that the experimental results presented here depend on the computer’s processor and memory, the version of each tool (MATLAB and ESBMC), and the partitioning problem to be solved. Additionally, any change from MATLAB to another tool or to GA/ILP libraries for different programming languages can influence the measured time of the algorithms.}
 
-All experiments were conducted on an otherwise idle Intel Core i$7$-$2600$ ($8$-cores), with $3$.$4$ GHz and $24$ GB of RAM, running Ubuntu $64$-bits. Each time was measured $3$ times (average taken). \textcolor{blue}{Empirical tests done by authors  demonstrated that a higher number of measurements, of each technique, did not produce significant differences in the experimental results (always below of 10\%, and mostly around 3\%).} 
+All experiments were conducted on an otherwise idle Intel Core i$7$-$2600$ ($8$-cores), with $3$.$4$ GHz and $24$ GB of RAM, running Ubuntu $64$-bits. Each time was measured $3$ times (average taken). \textcolor{blue}{Empirical tests performed by the authors demonstrated that a higher number of measurements, for each technique, did not produce significant differences in the experimental results (which were always below 10\% and mostly around 3\%).}
 
 Based on standard deviation and tolerance interval to each set of time sample, it was obtained a statistical confidence of $91.7$\% to ESBMC (sequential, SS, PB and $\nu$Z), $95.9$\% to ESBMC-PS, and $92.0$\% to ILP and GA. A timeout condition (TO) is reached when the verification time is longer than $3600$ seconds. A memory-out (MO) occurs when the tool reaches $15$ GB of memory. \textcolor{blue}{The TO was defined based on previous empirical tests as well, where a larger TO ({\it e.g.}, $5000$ seconds) did not produce substantial differences in the experimental results.} 
 
