[B-3] It was used three programs from Mibench benchmark (CRC3, Dijkstra and Patricia). Why them ? Mibench has 8 programs into 6 categories. Explain the motivation for only these 3 programs. It is possible to add information about more program from Mibench ?

--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -615,7 +615,7 @@ Based on standard deviation and tolerance interval to each set of time sample, i
 \end{minipage}
 
 \vspace{-3 mm}
-To perform the experiments, some benchmarks provided by~\cite{Mann2007} were used, as shown in Table~\ref{tab:Description-of-Benchmarks}. The nodes in the graphs correspond to high-level language instructions. Software and communication costs are time dimensional, and hardware costs represent the occupied area. The first three benchmarks are extracted from MiBench, as shown in~\cite{Guthaus2001}. The clustering and fuzzy benchmarks are designed from~\cite{Mann2007} and are significantly large benchmarks. From the same authors, very complex benchmarks to test the limits of the applicability of techniques were used (RC$6$ and Mars). \textcolor{blue}{The amount and types of benchmarks they were kept of related work to enable comparison with the techniques presented in this work.}
+To perform the experiments, some benchmarks provided by~\cite{Mann2007} were used, as shown in Table~\ref{tab:Description-of-Benchmarks}. The nodes in the graphs correspond to high-level language instructions. Software and communication costs are time dimensional, and hardware costs represent the occupied area. The first three benchmarks are extracted from MiBench, as shown in~\cite{Guthaus2001}. The clustering and fuzzy benchmarks are designed from~\cite{Mann2007} and are significantly large benchmarks. From the same authors, very complex benchmarks to test the limits of the applicability of techniques were used (RC$6$ and Mars). \textcolor{blue}{Note that we used the same number (and types) of benchmarks from the literature, in order to enable a fair comparison to other existing techniques presented in this study.}
 
 %----------------------------------------------
 \subsection{Experimental Results}
